alignment fix

--- a/css/style.css
+++ b/css/style.css
@@ -257,6 +257,9 @@ span{
         background-position-x: 0px;
         margin: 10px;
     }
+    .hero .left h1{
+        padding-top: 0;
+    }
 }
 
 .section-center{
@@ -461,6 +464,7 @@ section{
     margin: 0;
     color: #5C5C5C;
 }
+
 .companies{
     width: 100%;
     height: auto;
@@ -518,9 +522,10 @@ section{
     width: 100%;
     display: grid;
     grid-template-columns: repeat(2, 2fr);
-    grid-row-gap: 20px;
-    padding-bottom: 50px;
-    margin-left: 20px;
+    grid-row-gap: 40px;
+    grid-column-gap: 40px;
+    /* grid-gap: 50px; */
+    margin: 0 0 50px 110px;
 }
 .content-didi .content-left .content-box-{
     width: 250px;
@@ -528,7 +533,7 @@ section{
     background: #FFFFFF; 
     border-radius: 15px;
     border: 1px solid rgba(0, 0, 0, 0.1);
-    margin: 30px 0 0 55px;
+    /* margin: 30px 0 0 55px; */
     padding: 30px;
 }
 
@@ -574,6 +579,28 @@ section{
 .content-didi .content-right .didi img{
     width: 100%;
     height: 100%;
+}
+
+@media screen and (max-width: 768px){
+    .content-didi{
+        display: flex;
+        flex-direction: column;
+    }
+    .content-didi .content-left{
+        display: grid;
+        grid-template-columns: repeat(1, 1fr);
+        margin-left: 0;
+    }
+    .content-didi .content-left .content-box-{
+        margin: 10px auto;
+    }
+    .content-didi .content-right{
+        background-size: cover;
+        margin: 50px 0 0 50px;
+    }
+    .content-didi .content-right .didi img{
+        margin-bottom: -6px;
+    }
 }
 .hear{
     background: rgba(247, 179, 67, 0.05);
